--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,11 @@
             <version>5.6.5</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>0.26</version>
+        </dependency>
     </dependencies>
 
     <build>
